# swagger_output.json
@@ -2,18 +2,29 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0.0",
-    "title": "REST API",
-    "description": ""
+    "title": "Customer Dashboard",
+    "description": "客戶儀表板"
   },
-  "host": "localhost:3000",
+  "host": "http://localhost:3000",
   "basePath": "/",
   "schemes": [
     "http"
   ],
   "paths": {
+    "/getGloblaInfo": {
+      "get": {
+        "description": "獲取儀表板頂端資訊. total: 總註冊客戶 | current: 當日活躍客戶 | rolling: 7日內客戶session(滾動)",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/customer/sendEmail/{email}": {
       "get": {
-        "description": "",
+        "description": "發送驗證信. 簡易版,未檢核 email 是否存在於 db 之客戶，**請勿透過本功能亂傳 mail.**",
         "parameters": [
           {
             "name": "email",
@@ -31,7 +42,7 @@
     },
     "/customer/verifyEmail/{email}": {
       "get": {
-        "description": "",
+        "description": "驗證 email ",
         "parameters": [
           {
             "name": "email",
@@ -40,19 +51,19 @@
             "type": "string"
           }
         ],
-        "responses": {}
-      }
-    },
-    "/customer/logout": {
-      "get": {
-        "description": "",
-        "parameters": [],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
     "/customer/changeName": {
       "post": {
-        "description": "",
+        "description": "修改名稱. 未引入 [token驗證db] 機制,簡易版採用session存放,故本功能目前僅能透過網站使用",
         "parameters": [
           {
             "name": "body",
@@ -76,7 +87,7 @@
     },
     "/customer/changePwd": {
       "post": {
-        "description": "",
+        "description": "修改密碼. 只有個人註冊可以修改,使用第三方註冊之客戶將被禁止使用. 未引入 [token驗證db] 機制,簡易版採用session存放,故本功能目前僅能透過網站使用",
         "parameters": [
           {
             "name": "body",
